[package]
name = "revec"
version = "0.2.0"
authors = ["Ken <kenakioreed@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/tiby312/revec"

description = "Convert a Vec<A> to a Vec<B> provided vec is empty"
keywords = ["reuse","vec"]
readme = "README.md"
include = ["src/**/*", "LICENSE-MIT", "README.md"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]




[package.metadata.docs.rs]
# This sets the default target to `x86_64-unknown-linux-gnu`
# and only builds that target
targets = ["x86_64-unknown-linux-gnu"]